# youtube-transcriber

./: .gitignore  WORKSPACE_BRAINS.md  eslint.config.mjs  package-lock.json  package.json
resumenes/: ross-cameron-analisis-tecnico.md
scripts/: channel_scraper.py  resolve_channel.py  resolve_video.py  summarize.py  transcribe.py  update_brain.py  update_brain_batch.py  update_brain_delta.py
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: alert-dialog.tsx  alerts-list.tsx  app-sidebar.tsx  batch-persistence-mount.tsx  coin-detail-sheet.tsx  crypto-card.tsx  error-boundary.tsx  grid-toolbar.tsx  page-header.tsx  replay-chart.tsx  theme-applier.tsx  topbar.tsx  tradingview-chart.tsx  whisper-settings.tsx
src/contexts/: summary-context.tsx
src/hooks/: use-alert-monitor.ts  use-alerts.ts  use-api.ts  use-batches.ts  use-binance-klines.ts  use-binance-orderbook.ts  use-binance-prices.ts  use-binance-trades.ts  use-channels.ts  use-preferences.ts  use-videos.ts
src/lib/: alerts.ts  batch-persistence.ts  brain-batch.ts  coins.ts  constants.ts  db.ts  format.ts  notifications.ts  preferences.ts  rate-limit.ts  strategies.ts
trading-bot/: director_log.csv  director_shadow.json  director_state.json
trading-knowledge/TradingLatino/: CEREBRO.md  INDEX.md  README.md  REGLAS_OPERATIVAS.md  reglas_operativas.json
trading-motor/backtests/: DIARIO_BACKTESTS.md  INDEX.md  README.md  (+1 more)
(+55 files in other folders)
