[package]
name = "youtube-transcriber"
version = "0.1.0"
description = "YouTube Transcriber"
authors = ["you"]
edition = "2021"

[lib]
name = "youtube_transcriber_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
libc = "0.2.184"
